# cedar-go

./: LICENSE  README.md
cedar/: cedar.go  cedar_test.go
cedar/lib/: cedar.h
cedar/lib/cedar/: Cargo.toml  cbindgen.toml
cedar/lib/cedar/c-macros/: Cargo.toml
cedar/lib/cedar/c-macros/src/: c_box.rs  c_vec.rs  lib.rs
cedar/lib/cedar/c-macros/test/ui/: c_box.rs  c_vec.rs
cedar/lib/cedar/src/: authorizer.rs  diagnostics.rs  frontend.rs  lib.rs  policy_set.rs  raw_string.rs  schema.rs  validator.rs
