[workspace]
members = ["c-macros"]

[package]
name = "cedar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
c-macros = { path = "c-macros" }
cedar-policy = "2.4.2"
cedar-policy-core = "2.4.2"
libc = "0.2.150"
miette = "5.10.0"
serde = "1.0.193"
serde_json = "1.0.108"
